tests/error/invalid_array_shift.gw
#! [contains] array types do not match
int i[2];
i << 2.3;
